binrw/tests/ui/non_blocking_errors.stderr
error: expected one of: `stream`, `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `repr`, `map_stream`, `magic`, `import`, `import_raw`, `assert`, `pre_assert`, `bound`
 --> tests/ui/non_blocking_errors.rs:6:6
  |
6 | #[br(invalid_keyword_struct)]
  |      ^^^^^^^^^^^^^^^^^^^^^^

error: expected one of: `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `repr`, `map_stream`, `magic`, `args`, `args_raw`, `calc`, `try_calc`, `default`, `ignore`, `parse_with`, `count`, `offset`, `if`, `restore_position`, `try`, `temp`, `assert`, `err_context`, `pad_before`, `pad_after`, `align_before`, `align_after`, `seek_before`, `pad_size_to`, `dbg`, `bound`
 --> tests/ui/non_blocking_errors.rs:8:10
  |
8 |     #[br(invalid_keyword_struct_field_a)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected one of: `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `repr`, `map_stream`, `magic`, `args`, `args_raw`, `calc`, `try_calc`, `default`, `ignore`, `parse_with`, `count`, `offset`, `if`, `restore_position`, `try`, `temp`, `assert`, `err_context`, `pad_before`, `pad_after`, `align_before`, `align_after`, `seek_before`, `pad_size_to`, `dbg`, `bound`
  --> tests/ui/non_blocking_errors.rs:10:10
   |
10 |     #[br(invalid_keyword_struct_field_b)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
